# max-cut-hybrid-ga-ts

./: CMakeLists.txt  README.md  main.cpp
include/: Algorithm.h  Includes.h  Individual.h  Population.h
src/: Algorithm.cpp  Individual.cpp  Population.cpp
